fixed title alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,6 @@ header a:hover{
 	  nav ol{
 	  	text-align: center;
 	  }
-
 }
 
 @media only screen and (min-width: 38em){
@@ -87,6 +86,7 @@ header a:hover{
 		text-align: left;
 	}
 }
- h1{
-	  	text-align: left;
-	  }
+	 h1{
+		text-align: left;
+	}
+}
